--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "Sednoplan",
   "version": "1.0.0",
   "description": "Układ wskaźników mentalnych",
-  "main": "server.js",
+  "main": "api/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node api/server.js"
   },
   "author": "aww",
   "license": "ISC",
