--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/server.js" }
+  "version": 2,
+  "name": "Sednoplan",
+  "builds": [
+    {
+      "src": "api/server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/server.js"
+    }
   ]
 }
