--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,24 @@
 {
   "version": 2,
-  "name": "sednoplanapp",
+  "name": "Sednoplan",
   "builds": [
     {
       "src": "api/server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "/public/(.*)",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "api/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
     }
   ]
 }
